# Beautifulsoup-webscraper

./: .gitignore  README.md  books.csv  books_list.csv  config.py  credentials.json  main.py  pyproject.toml  requirements.txt  scraper.py  sheet_writer.py
