[project]
name = "Wep_scraper"
version = "0.1.0"
description = "Beautiful soup wepscraper "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "gspread>=6.2.1",
    "gspread-dataframe>=4.0.0",
    "lxml>=5.4.0",
    "numpy>=2.3.0",
    "oauth2client>=4.1.3",
    "pandas>=2.3.0",
    "playwright>=1.52.0",
    "requests>=2.32.4",
]
